--- a/vistas/publico/buscador.html
+++ b/vistas/publico/buscador.html
@@ -57,12 +57,15 @@
                     <!-- Contenedor del buscador input -->
                     <div class="col-lg-6 col-md-12 col-sm-12 contenedorSelectBuscado">
                         <div class="col-lg-12 col-sm-12 contenedorSelectBuscado">
-                            <div class="search-container me-5">
-                                <input class="form-control" type="search" name="search" placeholder="Buscar...."
-                                    id="buscadorInputZapatos" required>
-                                <span class="search-icon"><i class="bi bi-search"></i></span>
-                                <span class="clear-icon" onclick="clearSearch()"><i class="bi clear-icon"></i></span>
-                            </div>
+                            <form id="buscador">
+                                <div class="search-container me-5">
+                                    <input class="form-control" type="search" name="search" placeholder="Buscar...."
+                                        id="buscadorInputZapatos" required>
+                                    <span class="search-icon"><i class="bi bi-search"></i></span>
+                                    <span class="clear-icon" onclick="clearSearch()"><i
+                                            class="bi clear-icon"></i></span>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -104,9 +107,9 @@
                                     <div class="accordion-body">
                                         <div class="tallasScroll col-lg-12 col-md-12 d-flex justify-content-center">
                                             <!--CARDS DE TALLAS-->
-                                            <div
-                                                class="contenedorFilaTallas d-flex flex-row flex-wrap justify-content-center" id="contenedorFilaTallas">
-                                                
+                                            <div class="contenedorFilaTallas d-flex flex-row flex-wrap justify-content-center"
+                                                id="contenedorFilaTallas">
+
                                             </div>
                                         </div>
                                     </div>
@@ -130,7 +133,8 @@
                                         <div class="col-lg-10 col-md-10">
                                             <div class="col-lg-12 col-md-12">
                                                 <!--SELECCION DE COLORES-->
-                                                <select class="form-select color-5blue" id="coloresSelect">
+                                                <select class="form-select color-5blue" id="coloresSelect"
+                                                    name="coloresSelect">
                                                     <option disabled selected value="0">Selecciona un color</option>
                                                 </select required>
                                             </div>
