--- a/vistas/publico/inicio_sesion_registro.html
+++ b/vistas/publico/inicio_sesion_registro.html
@@ -80,6 +80,9 @@
                 ¿No tienes una cuenta?
                 <a class="color-5blue" onclick="Registro()">Registrate GRATIS </a>
             </label>
+            <label class="text-center col-sm-12 col-md-6 offset-md-3 col-lg-8 offset-lg-2 mb-2" for="olvidaste_clave">
+                <a class="color-5blue" href="index.html">Regresar</a>
+            </label>
         </div>
         <!-- *Pagina de Registro -->
         <div class="ContenedorRegistro d-none position-relative col-lg-6 col-md-8 col-sm-8 col-10
