Cambio boton de texto

--- a/vistas/publico/inicio_sesion_registro.html
+++ b/vistas/publico/inicio_sesion_registro.html
@@ -163,7 +163,7 @@
                             <div class="text-center d-flex justify-content-center mt-3">
                                 <button type="submit" class="btn btn-primary titillium-web-regular botonIngreso1"><i
                                         class="bi bi-send"></i>
-                                    Iniciar Sesion</button>
+                                    Registrarse</button>
                             </div>
                         </div>
                     </div>
