--- a/vistas/privado/zapatos.html
+++ b/vistas/privado/zapatos.html
@@ -583,6 +583,10 @@
                                                     onchange="displaySelectedImage(event, 'selectedImageDetalleZapato')" />
                                             </div>
                                         </div>
+                                        <button class="Rojo" onclick="openAddDetalleModal()"> <img class="note"
+                                            src="../../recursos/imagenes/icons/gmlIcon1.svg" width="35px"
+                                            height="35px">
+                                        </button>
                                     </div>
                                     <div class="contenedorR2">
                                         <table class="tablaTallas mt-3">
@@ -667,7 +671,7 @@
                                 <!-- Botón para actualizar el registro -->
                                 <button type="button" id="actualizarBtn"
                                     class="btn btn3 btn-primary ms-4 shadow text18 titillium-web-regular"
-                                    onclick="">
+                                    onclick="addDetalleZapato()">
                                     Agregar
                                 </button>
                             </div>
